--- a/index.html
+++ b/index.html
@@ -3,29 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Overlay</title>
+    <title>Test Bewegender Text</title>
     <style>
         body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: black;
+            color: white;
             font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-        .test-message {
-            font-size: 36px;
+        .moving-text {
+            position: absolute;
+            font-size: 50px;
             font-weight: bold;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+            white-space: nowrap;
+            animation: moveText 5s linear infinite;
+        }
+
+        @keyframes moveText {
+            0% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
         }
     </style>
 </head>
 <body>
-    <div class="test-message">
-        **Testseite erfolgreich geladen!** <br>
-        Wenn du dies siehst, funktioniert die GitHub-Integration.
+    <div class="moving-text">
+        **Die Seite aktualisiert sich regelmäßig!**
     </div>
 </body>
 </html>
